--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,8 +11,14 @@
     <body>
         <div id="react">
         </div>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/react-router/2.3.0/ReactRouter.min.js"></script>
+        <!-- Production -->
+        <script crossorigin src="//unpkg.com/react@16/umd/react.production.min.js"></script>
+        <script crossorigin src="//unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/react-router/4.3.1/react-router.min.js"></script>
+
+        <!-- Development
+        <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+        -->
     </body>
 </html>
